﻿V6.5 "KSP 1.2"
	Changes for KSP 1.2.
	Added a check to Contract generation to ensure the TST parts are actually loaded in-game (removes log spam if they aren't).
V6.4 "ResearchBodies 1.8"
	Compatible version for integration with ResearchBodies V1.8.
	Re-balanced price of Telescopes to take into account the cost of the ResearchBodies and Asteroid Day infrared telescopes.
	The small telescope now costs 10,000 (was 5,000) - entry price is still 5,000.
	The advanced telescope now costs 25,000 (was 10,000) - entry price is still 10,000.
V6.3 "More Kopernicus - New Horizons"
	Added support for New Horizons Kopernicus planet mod.
	Changed Reputation for contracts to be related to distance from home world, rather than the planet order from the Sun.
	Added Biomes to Science Reputation/Science/Funds calculations for ChemCam (previously it only used the planet).
	The default values used to calculate contract Reputation/Science/Funds for Telescope and ChemCam contracts are now loaded via the config.cfg file.
	These can be tweaked by changing these numbers (they are not available in game via GUI). NB: The numbers do not directly relate to what values you see in-game as
	there are formula used by KSP to calculate the funds, science and reputation for each contract. These values are the base numbers that feed into these formula.
	The SDDs right click buttons have changed. There are now two buttons:
	"Move all science to Drive" - This is the old action as per previous versions and will move all science from science container parts to this drive (until it is full).
	"Move all experiments to Drive" - This is a new action and will only move experiment science data from parts that don't have a ScienceConverter (ScienceLab) 
	and Command parts where crewcapacity > 0 to this drive (until it is full). 
	Added Screen messages indicating what science experiments are moved as part of a SDD move action.