@@ -1,24 +1,13 @@
 TSTSettings
 {
 	FwindowPosX = 40
-	FwindowPosY = 440
-	SCwindowPosX = 40
-	SCwindowPosY = 440
+	FwindowPosY = 440	
 	CwindowPosX = 510
 	CwindowPosY = 104
 	GalwindowPosX = 512
 	GalwindowPosY = 128
 	BodwindowPosX = 1186
-	BodwindowPosY = 269
-	ChemwinSml = 300
-	ChemwinLge = 600
-	TelewinSml = 300
-	TelewinLge = 600
-	UseAppLauncher = True
-	debugging = False
-	Tooltips = True
-	maxChemCamContracts = 3
-	ZoomSkyBox = True
+	BodwindowPosY = 269	
 	scienceUndiscoveredScope = 20
 	scienceDiscoveredScope = 2
 	repUndiscoveredScope = 20
